fix: portal dropdown menus over blurred sidebar

--- a/src/styles/dark.css
+++ b/src/styles/dark.css
@@ -11,7 +11,7 @@
 	--sidebar-chrome-border: rgba(255, 255, 255, 0.11);
 
 	/* dropdown */
-	--dropdown-menu-bg: #131313a6;
+	--dropdown-menu-bg: #1313134a;
 	--dropdown-menu-fg: #f5f5f5;
 	--dropdown-menu-border: 1px solid rgba(255, 255, 255, 0.192);
 	--dropdown-menu-shadow: 0 4px 18px -4px rgba(0, 0, 0, 0.25);
